--------------------------------------------------------------------------------
Changes for 2.0.0rc4

New features:
...G...... [ZBXNEXT-1188] added support of "agent.hostname" check (Sasha)
..F....... [ZBX-1357] updated Brazilian Portuguese, Czech, Dutch, Greek, Japanese, Latvian, Polish, Russian, Spanish and Ukrainian translations; thanks to Zabbix translators (Richlv)
..F....... [ZBXNEXT-1181] redesign Host mass update (Eduard)

Bug fixes:
........S. [ZBX-4921] fixed possible SQL errors while processing LLD data with long values (Sasha)
........S. [ZBX-4889] fixed execution of GUI Scripts for disabled hosts (Sasha)
..F.....S. [ZBX-4412] fixed updating of trigger last change by significant event (Sasha)
A......... [ZBX-4880] fixed error 'JSON-rpc error generation failed. No such error' in API (Vedmak)
..F....... [ZBX-4922] fixed importing of linked templates (Vedmak)
..F....... [ZBX-4895] fixed host proxy exported as id (Vedmak)
.......PS. [ZBX-4857] fixed poller hanging on ssh check when using public key authentication (dimir)
..F....... [ZBX-4914] fixed graph name encoding in form preview (Vedmak)
........S. [ZBX-4881] fixed slow select queries from partitioned history tables (Sasha)
..F....... [ZBX-4495] fixed hintbox positioning (Toms)
..F....... [ZBX-4903] fixed sorting in 'Overview' screen (Vedmak)
A......... [ZBX-4927] fix proxy deletion message and remove excess space from the audit record (Richlv)
..F....... [ZBX-4900] improved performance of 'Status of Zabbix' dashboard widget (Vedmak)
...G...... [ZBX-4905] fixed processing of system.swap.in/out[,pages] under Linux 2.6 (Sasha)
...G...... [ZBX-4907] fixed processing of system.swap.in/out[,sectors/count] under Linux (Sasha)
..F....... [ZBX-4902] fixed errors in configuration export (Vedmak)
........S. [ZBX-4910] fixed updating of "SNMPv3 priv passphrase" field in low-level discovered SNMPv3 items (Sasha)